fix ui problem; add upload but need to improve
Only allow a small image file to upload. It's too small. And we need a
little bit larger file and video file.

--- a/static/completions.css
+++ b/static/completions.css
@@ -3,12 +3,18 @@ div.entry {
     width: 90%;
     margin-left: auto;
     margin-right: auto;
+    vertical-align: middle;
 }
 
-div.challenger-name {
+div.challenger-name, div.challenger {
     width: 20%;
     text-align: center;
     display: inline-block;
+}
+
+div.challenger-name {
+    position: relative;
+    top: -50px;
 }
 
 div.link {
@@ -23,6 +29,12 @@ div.decision {
     display: inline-block;
 }
 
-button {
+button.confirm, button.not-confirm {
     margin-left: 20px;
+    position: relative;
+    top: -50px;
+}
+
+img {
+    height: 150px;
 }
